--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,9 +1,110 @@
 <style type="text/css">
 
 
-.title {
-	font-size:54px;
+.main{
+	background-color: #f2eee9;
+}
 
+.tag_cloud {
+
+	background:#80b0e4;
+	width: 380px;
+	margin-left:65px;
+	color:white;
+	font-family: sans-serif;
+}
+
+
+.body {
+
+	background-color: #80b0e4;
+	height:900px;
+}
+
+.header a {
+
+	float:right;
+	margin: 20px 20px 0px 10px;
+	font-family: georgia;
+	color: #3e7bbc;
+}
+
+.dude {
+	float:right;
+	margin-top:200px;
+
+}
+
+.logo {
+	padding: 10px 0px 0px 10px;
+	float:left;
+}
+
+.title {
+	padding:80px 0px 20px 0px;
+	font-size:42px;
+	text-align:center;
+	font-family: “Myriad Pro”, Arial, Helvetica, sans-serif;
+	color: #545556;
+}
+
+.photo_collage {
+
+	padding: 30px 0px 0px 30px;
+	float:left;
+
+}
+
+.search_area {
+	margin: 80px 0px 30px 60px;
+	float:left;
+	padding: 10px 31px 2px 20px;
+}
+
+.search_box {
+	border: 2px solid #1E69AD;
+	height: 50px;
+	font-size: 24px;
+	width: 350px;
+	color: #d4d4d4;
+	float:left;
+	padding:7px;
+}
+
+.search_entry {
+	border: 2px solid #1E69AD;
+	height: 50px;
+	font-size: 30px;
+	width: 350px;
+	color: #1E69AD;
+	float:left;
+	padding:2px;
+}
+
+
+.search_button {
+
+	margin:20px 0px 10px 20px;
+	width: 200px;
+	height:40px;	
+	color:white;
+	border:1px solid #1B5A1B;
+	padding: 8px 0px 0px 0px;
+	font-size:18px;
+	text-align: center;
+	background:#2DA62D;
+
+}
+
+
+.highlight {
+
+	color:#8CBB40;
+
+}
+
+.right_block{
+	float:left;
 }
 
 .medium_profile {
@@ -14,6 +115,7 @@
 	width: 250px;
 	border: 1px solid #999;
 	background: #F0F8FF;
+	float:left;
 
 
 }
