added all the work I've done on index, ad page

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -61,11 +61,12 @@
 }
 
 .sample_comment{
-
-	background-color:white;
-	color:#444;
-	height:100px;
-	width:300px;
+background-color:white;
+color:#444444;
+height:70px;
+margin:75px 0 0 20px;
+padding:6px;
+width:380px;
 
 }
 
