--- a/site/css/style.css
+++ b/site/css/style.css
@@ -42,27 +42,31 @@
 }
 
 .plans_block_small_button {
-	margin:225px 0px 0px 10px;
+	margin:55px 0px 0px 10px;
 	background-image: url('images/Subscription_Button_Small.png');
 	background-repeat: no-repeat;
 	float: left;
 	font-size:20px;
-	text-align:left;
+	text-align:center;
 	font-family: “Myriad Pro”, Arial, Helvetica, sans-serif;
 	color: white;
 	font-weight: bold;
+	width: 128px;
+	height: 34px;
 }
 
 .plans_block_large_button {
-	margin:336px 0px 0px 26px;
+	margin:60px 0px 0px 58px;
 	background-image: url('images/Subscription_Button_Large.png');
 	background-repeat: no-repeat;
 	float: left;
 	font-size:20px;
-	text-align:left;
+	text-align:center;
 	font-family: “Myriad Pro”, Arial, Helvetica, sans-serif;
 	color: white;
 	font-weight: bold;
+	width: 160px;
+	height: 42px;
 }
 
 .plans_block_small_title {
@@ -104,6 +108,8 @@
 	background-image: url('images/Subscription_Calendar1_Small.png');
 	background-repeat: no-repeat;
 	float: left;
+	width: 78px;
+	height: 103px;
 }
 
 .plans_1month_block_cal_icon {
@@ -111,16 +117,26 @@
 	background-image: url('images/Subscription_Calendar1_Large.png');
 	background-repeat: no-repeat;
 	float: left;
+	width: 96px;
+	height: 127px;
 }
 
 .plans_3month_block_cal_icon {
 	margin:-60px 0px 0px -30px;
 	background-image: url('images/Subscription_Calendar3_Small.png');
+	background-repeat: no-repeat;
+	float: left;
+	width: 78px;
+	height: 103px;
 }
 
 .plans_1year_block_cal_icon {
 	margin:-60px 0px 0px -30px;
 	background-image: url('images/Subscription_Calendar1_Small.png');
+	background-repeat: no-repeat;
+	float: left;
+	width: 78px;
+	height: 103px;
 }
 
 /*
