made top coder page work

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -368,7 +368,7 @@ width:380px;
 	height:69px;
 	text-align:center;
 	margin-left:5px;
-
+	margin-top: -11px;
 }
 
 .coder_small_source_ad p{
@@ -383,7 +383,7 @@ width:380px;
 .body {
 
 	background-color: #80b0e4;
-	height:760px;
+	height:1560px;
 }
 
 a img {
