--- a/site/css/style.css
+++ b/site/css/style.css
@@ -53,6 +53,7 @@
 	font-weight: bold;
 	width: 128px;
 	height: 48px;
+	vertical-align: -15%;
 }
 
 .plans_block_large_button {
@@ -67,6 +68,32 @@
 	font-weight: bold;
 	width: 160px;
 	height: 50px;
+	vertical-align: -15%;
+}
+
+.paylanding_back_button {
+	margin:150px 0px 0px 350px;
+	background-image: url('images/Subscription_Button_Large.png');
+	background-repeat: no-repeat;
+	float: left;
+	font-size:22px;
+	text-align:center;
+	font-family: “Myriad Pro”, Arial, Helvetica, sans-serif;
+	color: white;
+	font-weight: bold;
+	width: 160px;
+	height: 50px;
+	vertical-align: -15%;
+}
+
+.paylanding_cta_text {
+	margin:30px 0px 0px 20px;
+	font-size:36px;
+	text-align:center;
+	font-family: “Myriad Pro”, Arial, Helvetica, sans-serif;
+	color: white;
+	width:100%;
+	float: left;
 }
 
 .plans_block_small_title {
@@ -85,6 +112,26 @@
 	font-family: “Myriad Pro”, Arial, Helvetica, sans-serif;
 	color: white;
 	float: left;
+}
+
+.plans_block_small_pricetext {
+	margin:50px 0px 0px 30px;
+	font-size:36px;
+	text-align:center;
+	font-family: “Myriad Pro”, Arial, Helvetica, sans-serif;
+	color: #00bb00;
+	float: left;
+	font-weight: bold;
+}
+
+.plans_block_large_pricetext {
+	margin:75px 0px 0px 30px;
+	font-size:40px;
+	text-align:center;
+	font-family: “Myriad Pro”, Arial, Helvetica, sans-serif;
+	color: #00bb00;
+	float: left;
+	font-weight: bold;
 }
 
 .plans_block_small_bodytext {
@@ -273,7 +320,6 @@ width:380px;
 	text-align:center;
 }
 
-
 .tag_cloud {
 
 	background:#80b0e4;
@@ -283,6 +329,18 @@ width:380px;
 	font-family: sans-serif;
 	min-height:400px;
 }
+
+.tag_cloud_paylanding {
+
+	background:#80b0e4;
+	width: 380px;
+	margin-left:200px;
+	margin-top:300px;
+	color:white;
+	font-family: sans-serif;
+	min-height:400px;
+}
+
 .tag_cloud_small {
 
 	background:#80b0e4;
